Fixes #327. In line code wrapping

--- a/scss/components/_prism.scss
+++ b/scss/components/_prism.scss
@@ -13,7 +13,7 @@ code {
   border-radius: 3px;
   font-weight: 0.9rem;
   margin: 0;
-  word-break: break-all;
+  word-break: keep-all;
 }
 
 pre {
